CRM-4605 sort groups alphabetically, spacing issues
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23161 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -99,7 +99,7 @@ div.spacer, .spacer {
 }
   
 #crm-container .form-submit {
-  margin: 0em 0.5em 0.25em 0;
+  margin: .25em 0.5em 0.25em 0;
 }
 
 #crm-container .form-submit-inline {
